@@ -342,6 +342,7 @@ Special Pages:
 * (bug 3187) watchlist text refer to unexistent "Stop watching" action
 * Add block link and a link to the block log to Special:Contributions
 * Added $wgInvisibleGroups, to hide groups from Special:Listusers
+* Add contributions link to block log items
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
